--- a/code/theme/default/none/font.css
+++ b/code/theme/default/none/font.css
@@ -1,23 +1,15 @@
-/*
+/* Use For Title */
 @font-face {
-  font-family: 'Droid Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Droid Sans'), local('DroidSans'), url(font/droidsans.woff) format('woff');
+	font-family: 'Montserrat Light', sans-serif;
+	src: local('☺'), url('font/Montserrat-Light.ttf') format('truetype');
 }
-
-@font-face {
-	font-family: 'DIN-Medium';
-	font-weight: normal;
-	font-style: normal;
-	-webkit-font-smoothing: antialiased;
-	src: url('font/DIN-Medium.eot');
-	src: local('?'), url('font/DIN-Medium.woff') format('woff'), url('font/DIN-Medium.ttf') format('truetype'), url('font/DIN-Medium.svg') format('svg');
-}
-*/
+/* Use For Headings */
 @font-face {
 	font-family: 'Montserrat', sans-serif;
+	src: local('☺'), url('font/Montserrat-Regular.ttf') format('truetype');
 }
+/* Use For Body */
 @font-face {
 	font-family: 'Open Sans', sans-serif;
+	src: local('☺'), url('font/OpenSans-Regular.ttf') format('truetype');
 }
