--- a/code/theme/default/none/style.css
+++ b/code/theme/default/none/style.css
@@ -26,6 +26,9 @@ input[type=number]::-webkit-outer-spin-button {
 .input-group-btn:last-child > .btn{
 	z-index: 0;
 }
+.input-group{
+	width: 100%;
+}
 .form-control{
 	font-size: 16px;
 	padding: 6px 12px;
@@ -166,7 +169,11 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	background-color: #eeeeee !important;
 	color: #6f6f6f !important;
 	border: 1px solid #cccccc !important;
-	padding-bottom: 7px;
+}
+@-moz-document url-prefix() {
+	.currency-box .dropdown-toggle{
+		padding-bottom: 7px;
+	}
 }
 .currency-box .dropdown-menu{
 	min-width: 60px;
@@ -176,13 +183,17 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	background-color: #cdcecd;
 	color: #000000;
 	border: 1px solid #cccccc !important;
-	padding-bottom: 7px;
 }
 .btn-search:hover, .btn-search:focus{
 	background-color: #464646;
 }
 .btn-search:active{
 	background-color: #000000 !important;
+}
+@-moz-document url-prefix() {
+	.btn-search{
+		padding-bottom: 7px;
+	}
 }
 .btn-add-gift{
 	font-family: 'Muli',Helvetica;
