--- a/code/theme/default/fo/style.css
+++ b/code/theme/default/fo/style.css
@@ -51,9 +51,13 @@ input[type=number]::-webkit-outer-spin-button {
 	font-family: 'Muli';
 	font-size: 12px;
 }
-.no-padding{
+.no-gutters{
 	padding-left: 0px;
 	padding-right: 0px;
+}
+.row.no-gutters{
+	margin-left: 0px;
+	margin-right: 0px;
 }
 .text-center{
 	text-align: center;
@@ -63,17 +67,23 @@ input[type=number]::-webkit-outer-spin-button {
 	padding: 20px;
 	background-color: rgba(255, 255, 255, 0.8);
 }
-.donor-title-content{
-	font-size: 16px;
-	font-weight: bold;
-	font-family: 'OpenSans',Helvetica;
-	color: #1c244e;
+.donor-content-title{
+	font-size: 22px;
+	font-family: 'Muli-Bold',Helvetica;
 }
-.donor-regular-content{
+.donor-content-subtitle{
+	font-size: 16px;
+	font-family: 'Muli-Bold',Helvetica;
+}
+.donor-content-regular{
 	font-size: 14px;
 	font-weight: normal;
-	font-family: 'OpenSans-Bold',Helvetica;
-	color: #1c244e;
+	font-family: 'Muli',Helvetica;
+}
+.donor-content-regular-bold{
+	font-size: 14px;
+	font-weight: normal;
+	font-family: 'Muli-Bold',Helvetica;
 }
 .social-header {
 	float: right;
@@ -92,6 +102,7 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-left: 5px;
 }
 .span-link{
+	text-decoration: underline;
 	cursor: pointer;
 }
 .navbar {
@@ -172,9 +183,11 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	font-family: 'Montserrat',Helvetica;
 	color: #1c244e;
 }
-
+.blackcurrant{
+	color: #1c244e;
+}
 .donor-table{
-	width: 100%; background-color: #ebebeb; font-family: 'Muli', Helvetica;
+	width: 100%; background-color: #f3f3f3; font-family: 'Muli', Helvetica;
 }
 .donor-table .header{
 	font-family: 'Muli-Bold', Helvetica; text-align: center; font-size: 18px; font-weight: bold;
@@ -182,19 +195,20 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 .donor-table .header td{
 	padding: 8px;
 	cursor: pointer;
-	background-color: #f3f3f3;
-}
-.donor-table .header td:hover, .donor-table .header td.active{
 	background-color: #ebebeb;
 }
+.donor-table .header td:hover, .donor-table .header td.active{
+	background-color: #f3f3f3;
+}
 .donor-table label{
-	font-size: 16px;
+	font-size: 12px;
+	color: grey;
 }
 .donor-table input[type="radio"]{
 	margin-top: 5px;
 }
 .donor-table .radio-inline{
-padding-right: 10px;
+	padding-right: 10px;
 }
 .donor-center-link{
 	text-align: center;
@@ -207,10 +221,103 @@ padding-right: 10px;
 	margin: 10px;
 	cursor: pointer;
 }
+.donor-checkbox-subscriptions{
+	display: block;
+	vertical-align: middle;
+	padding-left: 20px;
+	cursor: pointer;
+	font-size: 14px !important; 
+	color: black !important;
+}
+.donor-checkbox-subscriptions input[type="checkbox"] {
+    position: absolute;
+    margin-left: -20px;
+}
+.donor-checkbox-language{
+	display: block;
+	vertical-align: middle;
+	padding-left: 20px;
+	cursor: pointer;
+	font-family: 'Muli-Bold',Helvetica;
+	font-size: 16px !important; 
+	color: black !important;
+}
+.donor-checkbox-language input[type="checkbox"] {
+    position: absolute;
+    margin-left: -20px;
+}
 .container.ifes-content{
 	padding-top: 30px;
 }
-
+.table.donor-table-content{
+	border-bottom: 0px;
+}
+.table.donor-table-content > thead > tr > th {
+	border-bottom: 0px;
+	padding: 0px 8px 8px 0px;
+	font-size: 16px;
+}
+.table.donor-table-content > thead > tr > th, .table.donor-table-content > tbody > tr > th,
+ .table.donor-table-content  > tfoot > tr > th, .table.donor-table-content > thead > tr > td,
+ .table.donor-table-content > tbody > tr > td, .table.donor-table-content > tfoot > tr > td {
+	border-top: 0px;
+	padding: 0px 8px 8px 0px;
+	font-size: 16px;
+}
+.modal-content.donor-billing{
+	background-color: #f3f3f3;
+}
+.modal-header.donor-billing{
+	font-family: 'Muli-Bold',Helvetica;
+	text-align: center;
+	text-transform: none;
+	padding: 0px;
+}
+.modal-title.donor-billing{
+	font-family: 'Muli-Bold',Helvetica;
+	font-size: 16px;
+	font-weight: 600;
+}
+.modal-subtitle{
+	font-size: 12px;
+	font-weight: 400;
+	text-align: left;
+	padding: 10px 0px 10px 0px;
+}
+.modal-body.donor-billing{
+	padding: 0px;
+}
+.modal-footer.donor-billing{
+	border-top: 0px;
+}
+.bootstrap-select .btn-default, .bootstrap-select .btn-default:hover, .bootstrap-select .btn-default:focus, .bootstrap-select.open > .dropdown-toggle.btn-default, .bootstrap-select.open > .dropdown-toggle.btn-default:hover{
+	background-color: #ffffff;
+	color: #222222;
+	border: 1px solid #cccccc;
+}
+.btn-ifes{
+	font-family: 'Muli',Helvetica;
+	width: 150px;
+	background-color: #cdcecd;
+	color: #000000;
+}
+.btn-ifes:hover, .btn-ifes:focus{
+	background-color: #464646;
+}
+.btn-ifes:active{
+	background-color: #000000 !important;
+}
+.quick-links a{
+	font-family: 'Muli-Bold',Helvetica ;
+	color: black;
+}
+.payment-form label{
+	font-size: 12px;
+	color: grey;
+}
+.row-eq-height { /*use with overflow: hide; on parent div */
+  display:         flex;
+}
 .clearfix:after,.radio-option:after{visibility:hidden;display:block;font-size:0;content:'.';clear:both;height:0}
 * html .clearfix,* html .radio-option{zoom:1}
 *:first-child+html .clearfix,*:first-child+html .radio-option{zoom:1}
