more donor portal updates

--- a/code/core/plugins/bootstrap-3.3.6/css/bootstrap-custom.css
+++ b/code/core/plugins/bootstrap-3.3.6/css/bootstrap-custom.css
@@ -3089,7 +3089,7 @@ fieldset[disabled] a.btn {
 }
 .btn-default:hover {
   color: #ffffff;
-  background-color: #4F4898;
+  background-color: #534f71;
 }
 .btn-default:active,
 .btn-default.active,
