--- a/code/theme/default/none/style.css
+++ b/code/theme/default/none/style.css
@@ -440,6 +440,10 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 .currency-box .btn-ifes{
 	margin-left: 10px !important;
 }
+.gift-canada p a{
+	color: #000000;
+	text-decoration: underline;
+}
 /*** Giving Page - End ***/
 
 .btn-search{
