--- a/code/theme/default/fo/style.css
+++ b/code/theme/default/fo/style.css
@@ -388,6 +388,44 @@ p.subscription-modal{
 	font-size: 12px;
 	color: grey;
 }
+/*** Stripe Elements - Start ***/
+.StripeElement {
+  background-color: white;
+  padding: 4px 12px;
+  border: 1px solid #cccccc;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+
+.stripe-info {
+	display: block;
+	font-weight: 400;
+	text-align: left;
+	font-size: 14px;
+}
+
+.stripe-error {
+	text-align: left;
+    height: 20px;
+    color: #fa755a;
+	font-family: 'Muli', Helvetica;
+	font-size: 16px;
+}
+
+/*** Stripe Elements - End ***/
 .row-eq-height { /*use with overflow: hide; on parent div */
   display:         flex;
 }
