--- a/code/theme/default/none/style.css
+++ b/code/theme/default/none/style.css
@@ -319,7 +319,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	height: auto; min-height: 250px; font-family: 'Muli', Helvetica; font-size: 16px; padding: 5px 24px;
 }
 .gift-list-label-recurring{
-	float: right; line-height: 2.2; padding-right: 10px;
+	float: right; line-height: 2.2; padding-right: 10px; padding-left: 10px;
 }
 .gift-list-save-container{
 	padding-right: 0; text-align: right; clear:both; line-height: 2;
