--- a/code/theme/default/bo/custom_style.css
+++ b/code/theme/default/bo/custom_style.css
@@ -13,8 +13,11 @@ body {
     text-align: left;
     font-family: 'Muli', sans-serif;
     font-size: 16px;
-    line-height: 20px;
+    /*line-height: 20px;*/
     font-weight: normal;
     color: #232323;
     background: #fff;
+}
+.navbar-default .dropdown-menu {
+	background-color: #534F71;
 }
